[package]
name = "bm"
description = "collection of tools for developers"
readme = "README.md"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Matej Janežič <janezic.mj@gmail.com>"]
repository = "https://github.com/janezicmatej/batman.git"


[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
clap = { version = "4.1.1", features = ["derive"] }
clap_complete = "4.1.0"
home = "0.5.4"
open = "3.2.0"
reqwest = "0.11.13"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
tokio = { version = "1.24.1", features = ["full"] }
